--- a/index.html
+++ b/index.html
@@ -659,9 +659,9 @@
                             </div>
                             <div class="travel__reviews-person">
                                 <div class="travel__reviews-person-img">
-                                    <img src="./asset/img/reviews1.jpg" alt="Gordon Ramsey A Taste of Viet Nam">
+                                    <img src="./asset/img/reviews1.jpg" alt="Gordon Ramsay A Taste of Viet Nam">
                                 </div>
-                                <div class="travel__reviews-person-think">Gordon Ramsey A Taste of Viet Nam</div>
+                                <div class="travel__reviews-person-think">Gordon Ramsay A Taste of Viet Nam</div>
                             </div>
                         </div>
                     </div>
